# FastAPI-practice

./: .env  main.py  pyproject.toml
app/: auth.py  auth_router.py  db.py  excercise_router.py  models.py  nutrition_router.py  progress_router.py  user_router.py  workout_router.py
